--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "config": "^3.3.2",
     "express": "^4.17.1",
-    "mongoose": "^5.10.15"
+    "mongoose": "^5.10.15",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.5"
