--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-validator": "^6.10.0",
     "mongoose": "^5.10.15",
     "mongoose-unique-validator": "^2.0.3",
+    "multer": "^1.4.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
