--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/dogueone/e-commerce-shop#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "config": "^3.3.2",
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
