--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^5.10.15",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
+    "stripe": "^8.156.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
