--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-flip-move": "^3.0.4",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-transition-group": "^4.4.1",
+    "redux": "^4.1.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
