--- a/client/.gitignore
+++ b/client/.gitignore
@@ -11,8 +11,13 @@
 # production
 /build
 
+client/.env
+client/.env.production
+
 # misc
 .DS_Store
+.env
+.env.production
 .env.local
 .env.development.local
 .env.test.local
